# app/Http/Requests/ProfileUpdateRequest.php
@@ -26,18 +26,15 @@ class ProfileUpdateRequest extends FormRequest
         return [
             'firstName' => ['required', 'string', 'max:255'],
             'lastName' => ['required', 'string', 'max:255'],
-            'gender' => ['required', 'string', 'max:20'],
-            'contactPhoneNumber' => ['required', 'string', 'max:25'],
+            'gender' => ['nullable', 'string', 'max:20'],
+            'contactPhoneNumber' => ['nullable', 'string', 'max:25'],
             'birthDate' => ['required', 'date'],
-            'country' => ['required', 'string', 'max:255'],
+            'country' => ['nullable', 'string', 'max:255'],
             'city' => ['required', 'string', 'max:255'],
-            'education' => ['required'],
-            'maritalStatus' => ['required'],
             'haveChildren' => ['boolean'],
-            'badHabits' => ['required', 'array'],
-            'badHabits.*' => ['string', 'required'],
-            'interests' => ['required', 'array'],
-            'interests.*' => ['string', 'required']
+            'badHabits' => ['nullable', 'array'],
+            'interests' => ['nullable', 'array'],
+            'nationality' => ['nullable', 'string', 'max:255']
         ];
     }
 }
